--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "winston": "^3.19.0"
   }
 }
