--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bullmq": "^5.67.2",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.9.2",
     "pg": "^8.11.0",
     "winston": "^3.19.0"
   }
