--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/server.js",
     "migrate": "node src/database/migrations/runMigrations.js",
+    "seed": "node src/database/seeds/seedJobs.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "keywords": [
     "bullmq",
@@ -18,6 +20,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "bullmq": "^5.67.2",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
