--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "ioredis": "^5.9.2",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.11.0",
     "winston": "^3.19.0"
