--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.67.2",
+    "cors": "^2.8.6",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2",
+    "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.9.2",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
@@ -33,6 +36,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "axios": "^1.13.4",
     "nodemon": "^3.1.11"
   }
 }
